# Python-HandBook

./: .gitignore  README.md  jb.py  pyproject.toml
 Потоковый ввод/: A+B.py  Без комментариев 2.0.py  Средний рост.py
Вложенные циклы/: hui.py  Анонс новости 2.0.py  Максимальная сумма.py  Мы делили апельсин.py  Новогоднее настроение.py  Редизайн таблицы умножения.py  Список покупок 2.0.py  Таблица умножения.py  Числовая змейка.py  Числовой прямоугольник 2.0.py  Числовой прямоугольник.py
Коллекции - встроенные методы/: Игровая сетка.py  Колода карт.py  Меню питания 2.0.py  Мы делили апельсин 2.0.py  РаскладТаков.py  Расстановка спортсменов.py  Сборы на прогулку.py  Словарная ёлка.py  Список покупок 3.0.py  Список покупок.py  Таблица истинности 2.py  Таблица умножения 3.0.py  Таблицы истинности 3.py  Числовой прямоугольник 3.0.py
Множества, словари/: Азбука Морзе.py  Двоичная статистика!.py  Зайка — 8.py  Кашееды — 4.py  Кашееды.py  Однофамильцы — 2.py  Частная собственность.py  Это будет шедевр!.py
Основы - ввод и перменные/: Автоматизация игры.py  Дед Мороз и конфеты.py  Делу — время, потехе — час.py  Доставка.py  Интересное сложение.py  Ошибка кассового аппарата.py  Сдача 10.py  Сдача.py
Потоковый ввод/: А роза упала на лапу Азора 6.0.py  Найдётся всё 2.0.py  Найдётся всё 3.0.py  Сколько вешать в байтах?.py  Файловая статистика 2.0.py  Файловая чистка.py  Это будет наш секрет.py
Списочные выражения/: Буквенная статистика.py  Множество всех полных квадратов.py  Список квадратов.py
Строки, списки и кортежи/: RLE.py  dag.py  sadf asf.py  Азбука.py  Зайка — 6.py  (+7 more)
(+182 files in other folders)
