[tool.poetry]
name = "python-handbook"
version = "0.1.0"
description = ""
authors = ["rkh01106@gmail.com"]
readme = "README.md"
packages = [{include = "python_handbook"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
