[tool.poetry]
name = "python handbook"
version = "0.1.0"
description = ""
authors = ["Rustem Khutiev <76971769+PhenomenaPh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mypy = "^1.8.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
